fixed header style issue on mobile mode

--- a/frontend/components/layout/Layout.module.css
+++ b/frontend/components/layout/Layout.module.css
@@ -105,7 +105,7 @@
   bottom: 0;
   top: 100px;
   /* padding: 100px 5%; */
-  padding-top: 50px;
+  padding-top: 10rem;
   padding-bottom: 25px;
   min-height: calc(100vh - 40px);
   height: 100%;
